Fix icon/link spacing after et-book change

--- a/css/master.css
+++ b/css/master.css
@@ -268,13 +268,13 @@ ul.nav li a:hover {
 
 #topic li.link {
   font-size: 16px;
-  padding-top: 8px;
+  padding-top: 17px;
 }
 
 #topic li.icon img {
   width:  50px;
   height: 50px;
-  padding-top: 20px;
+  padding-top: 33px;
 }
 
 #topic li p {
